--- a/source/posts/2017/08-08-podcast-05-31.html.md
+++ b/source/posts/2017/08-08-podcast-05-31.html.md
@@ -1,5 +1,5 @@
 ---
-title: "30 выпуск 05 сезона.  и прочее"
+title: "30 выпуск 05 сезона. Rails 5.1.3, Elixir Envy ᐅ Ruby, Orchparty, Graphql-Guard, TensorFire, WTF.JS, Shoelace.css и прочее"
 date: 2017-08-08
 tags:
  - podcasts
@@ -22,7 +22,8 @@ main_image: "/images/static/05/0531.png"
 
 ## JavaScript
 
- - [Chrome release schedule](https://www.chromestatus.com/features/schedule)
- - [TensorFire - runs neural networks in the browser using WebGL](https://tenso.rs/), [WTF.JS - a list of funny and tricky JavaScript examples](https://github.com/denysdovhan/wtfjs)
+ - [Chrome release schedule](https://www.chromestatus.com/features/schedule) и [Vue vs React: Battle of the Javascript Frameworks](https://medium.com/@diananina247/vue-vs-react-battle-of-the-javascript-frameworks-8e6615677dcb)
+ - [Focusing on Focus](https://davidwalsh.name/css-focus), [Oh yes! Async / Await](https://medium.freecodecamp.org/oh-yes-async-await-f54e5a079fc1) и [The Critical Request](https://css-tricks.com/the-critical-request/)
+ - [TensorFire - runs neural networks in the browser using WebGL](https://tenso.rs/), [WTF.JS - a list of funny and tricky JavaScript examples](https://github.com/denysdovhan/wtfjs) и [Shoelace.css - a highly customizable starter kit through CSS variables](https://shoelace.style/)
 
 READMORE
