--- a/source/posts/2017/08-14-podcast-05-32.html.md
+++ b/source/posts/2017/08-14-podcast-05-32.html.md
@@ -18,11 +18,17 @@ main_image: "/images/static/05/0532.png"
 
  - [Malicious code written into DNA infects the computer that reads it](https://techcrunch.com/2017/08/09/malicious-code-written-into-dna-infects-the-computer-that-reads-it/)
  - [Faster Rails: Eliminating N+1 queries](http://semaphoreci.com/blog/2017/08/09/faster-rails-eliminating-n-plus-one-queries.html)
-
+ - [Fabrication vs FactoryGirl](https://ksylvest.com/posts/2017-08-12/fabrication-vs-factorygirl)
+ - [UniqueValidationInspector - a rake task that helps you find unique validations in models that do not have proper DB indexes](https://github.com/soulfly/unique_validation_inspector)
+ - [A Deep Dive into CSRF Protection in Rails](https://medium.com/rubyinside/a-deep-dive-into-csrf-protection-in-rails-19fa0a42c0ef)
+ - [Using Gemstash for Private Gem Hosting](https://blog.showoff.ie/using-gemstash-for-private-gem-hosting-8b6170da766c)
 
 ## JavaScript
 
  - [Attackers Use Typo-Squatting To Steal npm Credentials](https://threatpost.com/attackers-use-typo-squatting-to-steal-npm-credentials/127235/)
+ - [Hunting Malicious npm Packages](https://duo.com/blog/hunting-malicious-npm-packages)
+ - [Atom 1.19](http://blog.atom.io/2017/08/08/atom-1-19.html)
  - [Time.gif](https://hookrace.net/blog/time.gif/)
+ - [RawKit - immediately Open Chrome DevTools when debugging Node.js apps](https://github.com/darcyclarke/rawkit)
 
 READMORE
