--- a/source/posts/2017/08-22-podcast-05-33.html.md
+++ b/source/posts/2017/08-22-podcast-05-33.html.md
@@ -1,5 +1,5 @@
 ---
-title: "33 выпуск 05 сезона.  и прочее"
+title: "33 выпуск 05 сезона. Six confusing features in Ruby, TestProf: a good doctor for slow Ruby tests, Repatch, Iroh и прочее"
 date: 2017-08-22
 tags:
  - podcasts
@@ -16,20 +16,12 @@ main_image: "/images/static/05/0533.png"
 
 ## Ruby
 
- - [Six confusing features in Ruby](https://hqc.io/posts/six-confusing-features-in-ruby)
- - [My first 10 minutes with Eventide](http://blog.arkency.com/my-first-10-minutes-with-eventide/)
- - [How to have same enum values for multiple columns in rails](https://www.sharmaprakash.com.np/rails/same-enum-values-for-multiple-columns/)
- - [Rails Techniques: Using Polymorphic Associations](https://semaphoreci.com/blog/2017/08/16/polymorphic-associations-in-rails.html)
- - [TestProf: a good doctor for slow Ruby tests](https://evilmartians.com/chronicles/testprof-a-good-doctor-for-slow-ruby-tests)
+ - [Six confusing features in Ruby](https://hqc.io/posts/six-confusing-features-in-ruby), [Active Record’s queries tricks](https://medium.com/@apneadiving/active-records-queries-tricks-2546181a98dd) и [How to have same enum values for multiple columns in rails](https://www.sharmaprakash.com.np/rails/same-enum-values-for-multiple-columns/)
+ - [TestProf: a good doctor for slow Ruby tests](https://evilmartians.com/chronicles/testprof-a-good-doctor-for-slow-ruby-tests), [Factories or fixtures? Give me both!](https://evilmartians.com/chronicles/factories-or-fixtures) и [Recurring Events with FullCalendar](https://www.driftingruby.com/episodes/recurring-events-with-fullcalendar)
 
 ## JavaScript
 
- - [Explaining React's license](https://code.facebook.com/posts/112130496157735)
- - [How JavaScript works: an overview of the engine, the runtime, and the call stack](https://blog.sessionstack.com/how-does-javascript-actually-work-part-1-b0bacc073cf)
- - [Understanding V8’s Bytecode](https://medium.com/dailyjs/understanding-v8s-bytecode-317d46c94775)
- - [Rethinking drag and drop](https://medium.com/@alexandereardon/rethinking-drag-and-drop-d9f5770b4e6b)
- - [Repatch - the simplified Redux](https://community.risingstack.com/repatch-the-simplified-redux/)
- - [Ugnis - a visual component editor for React and React Native](https://www.ugnis.com/)
- - [Puppeteer - Headless Chrome Node API](https://github.com/GoogleChrome/puppeteer)
+ - [Explaining React's license](https://code.facebook.com/posts/112130496157735), [How JavaScript works: an overview of the engine, the runtime, and the call stack](https://blog.sessionstack.com/how-does-javascript-actually-work-part-1-b0bacc073cf) и [Understanding V8’s Bytecode](https://medium.com/dailyjs/understanding-v8s-bytecode-317d46c94775)
+ - [Rethinking drag and drop](https://medium.com/@alexandereardon/rethinking-drag-and-drop-d9f5770b4e6b), [Repatch - the simplified Redux](https://community.risingstack.com/repatch-the-simplified-redux/), [Ugnis - a visual component editor for React and React Native](https://www.ugnis.com/) и [Puppeteer - Headless Chrome Node API](https://github.com/GoogleChrome/puppeteer) и [Iroh - a dynamic code analysis tool for JavaScript](http://www.felixmaier.info/Iroh/)
 
 READMORE
