--- a/source/posts/2017/07-31-podcast-05-30.html.md
+++ b/source/posts/2017/07-31-podcast-05-30.html.md
@@ -26,7 +26,7 @@ main_image: "/images/static/05/0530.png"
  - [What you should know to really understand the Node.js Event Loop](https://medium.com/the-node-js-collection/what-you-should-know-to-really-understand-the-node-js-event-loop-and-its-metrics-c4907b19da4c) и [How I built a wind map with WebGL](https://blog.mapbox.com/how-i-built-a-wind-map-with-webgl-b63022b5537f)
  - [The JavaScript Way (book)](https://github.com/bpesquet/thejsway/#readme), [Fitty - makes text fit perfectly](https://rikschennink.github.io/fitty/) и [Spacetime - a lightweight way to manipulate, traverse, compare, and format dates and times across planet Earth](https://github.com/smallwins/spacetime)
 
-## Oleh Perevertailo
+## В гостях - Oleh Perevertailo
 
  - [Github](https://github.com/LegaKh)
  - [Linkedin](https://www.linkedin.com/in/oleg-perevertaylo-48797393/)
