--- a/source/posts/2017/08-22-podcast-05-33.html.md
+++ b/source/posts/2017/08-22-podcast-05-33.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0533.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.33/0533.mp3"
 audio_format: "audio/mpeg"
-audio_length: 20673254
-duration: "00:21:30"
+audio_length: 59395536
+duration: "01:01:50"
 small_icon: mic
 main_image: "/images/static/05/0533.png"
 ---
@@ -22,10 +22,15 @@ main_image: "/images/static/05/0533.png"
 ## JavaScript
 
  - [Explaining React's license](https://code.facebook.com/posts/112130496157735), [How JavaScript works: an overview of the engine, the runtime, and the call stack](https://blog.sessionstack.com/how-does-javascript-actually-work-part-1-b0bacc073cf) и [Understanding V8’s Bytecode](https://medium.com/dailyjs/understanding-v8s-bytecode-317d46c94775)
- - [Rethinking drag and drop](https://medium.com/@alexandereardon/rethinking-drag-and-drop-d9f5770b4e6b), [Repatch - the simplified Redux](https://community.risingstack.com/repatch-the-simplified-redux/), [Ugnis - a visual component editor for React and React Native](https://www.ugnis.com/) и [Puppeteer - Headless Chrome Node API](https://github.com/GoogleChrome/puppeteer) и [Iroh - a dynamic code analysis tool for JavaScript](http://www.felixmaier.info/Iroh/)
+ - [Rethinking drag and drop](https://medium.com/@alexandereardon/rethinking-drag-and-drop-d9f5770b4e6b), [Repatch - the simplified Redux](https://community.risingstack.com/repatch-the-simplified-redux/), [Ugnis - a visual component editor for React and React Native](https://www.ugnis.com/), [Puppeteer - Headless Chrome Node API](https://github.com/GoogleChrome/puppeteer) и [Iroh - a dynamic code analysis tool for JavaScript](http://www.felixmaier.info/Iroh/)
 
 ## Conferences
 
  - [Ruby Meditation #17](http://www.rubymeditation.com/)
+
+## В гостях - Vlad Moskovets
+
+ - [Github](https://github.com/slayer/)
+ - [Linkedin](https://www.linkedin.com/in/vlad-moskovets-ab483428/)
 
 READMORE
