--- a/source/posts/2017/09-11-podcast-05-36.html.md
+++ b/source/posts/2017/09-11-podcast-05-36.html.md
@@ -16,10 +16,12 @@ main_image: "/images/static/05/0536.png"
 
 ## Ruby
 
-
+ - [Gemfile's new clothes](https://depfu.com/blog/2017/09/06/gemfiles-new-clothes), [Introduction to Concurrency Models with Ruby. Part II](https://engineering.universe.com/introduction-to-concurrency-models-with-ruby-part-ii-c39c7e612bed) и [Rails on Docker: Using Docker Compose with Your Ruby on Rails Apps](https://www.chrisblunt.com/rails-on-docker-using-docker-compose-with-your-ruby-on-rails-apps/)
+ - [Headless Chrome vs PhantomJS Benchmark](https://medium.com/@hartator/benchmark-headless-chrome-vs-phantomjs-e7f44c6956c), [Superfast CSV imports using PostgreSQL's COPY command](https://infinum.co/the-capsized-eight/superfast-csv-imports-using-postgresqls-copy) и [Improving spec speed in a huge, old Rails app](https://goiabada.blog/improving-spec-speed-in-a-huge-old-rails-app-8f3ab05a33f9)
 
 ## JavaScript
 
- - [Why we moved from Angular 2 to Vue.js (and why we didn’t choose React)](https://medium.com/reverdev/why-we-moved-from-angular-2-to-vue-js-and-why-we-didnt-choose-react-ef807d9f4163)
+ - [Announcing Yarn 1.0](https://code.facebook.com/posts/274518539716230), [Why we moved from Angular 2 to Vue.js (and why we didn’t choose React)](https://medium.com/reverdev/why-we-moved-from-angular-2-to-vue-js-and-why-we-didnt-choose-react-ef807d9f4163) и [Cycle.js: A Unified Theory of Everything for JavaScript](https://medium.com/open-collective/cycle-js-a-unified-theory-of-everything-for-javascript-e266ac9a59ad)
+ - [Size Limit: Make the Web lighter](https://evilmartians.com/chronicles/size-limit-make-the-web-lighter), [LookForward.js - a small library that helps you to create smooth transitions between pages with the easiest way](https://appleple.github.io/lookforward/) и [Rythm.js - a javascript library that makes your page dance](https://okazari.github.io/Rythm.js/)
 
 READMORE
