--- a/source/posts/2017/09-11-podcast-05-36.html.md
+++ b/source/posts/2017/09-11-podcast-05-36.html.md
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 05 сезона.  и прочее"
+title: "36 выпуск 05 сезона. Yarn 1.0, Gemfile's new clothes, Headless Chrome vs PhantomJS, Size Limit: Make the Web lighter и прочее"
 date: 2017-09-11
 tags:
  - podcasts
