--- a/source/posts/2017/09-11-podcast-05-36.html.md
+++ b/source/posts/2017/09-11-podcast-05-36.html.md
@@ -17,7 +17,7 @@ main_image: "/images/static/05/0536.png"
 ## Ruby
 
  - [Gemfile's new clothes](https://depfu.com/blog/2017/09/06/gemfiles-new-clothes), [Introduction to Concurrency Models with Ruby. Part II](https://engineering.universe.com/introduction-to-concurrency-models-with-ruby-part-ii-c39c7e612bed) и [Rails on Docker: Using Docker Compose with Your Ruby on Rails Apps](https://www.chrisblunt.com/rails-on-docker-using-docker-compose-with-your-ruby-on-rails-apps/)
- - [Headless Chrome vs PhantomJS Benchmark](https://medium.com/@hartator/benchmark-headless-chrome-vs-phantomjs-e7f44c6956c), [Superfast CSV imports using PostgreSQL's COPY command](https://infinum.co/the-capsized-eight/superfast-csv-imports-using-postgresqls-copy) и [Improving spec speed in a huge, old Rails app](https://goiabada.blog/improving-spec-speed-in-a-huge-old-rails-app-8f3ab05a33f9)
+ - [Headless Chrome vs PhantomJS Benchmark](https://medium.com/@hartator/benchmark-headless-chrome-vs-phantomjs-e7f44c6956c) и [Superfast CSV imports using PostgreSQL's COPY command](https://infinum.co/the-capsized-eight/superfast-csv-imports-using-postgresqls-copy)
  - [What service objects are not](https://blog.lelonek.me/what-service-objects-are-not-7abef8aa2f99), [About Rails concerns](https://medium.com/@carlescliment/about-rails-concerns-a6b2f1776d7d) и [Interactor - a common interface for performing complex user interactions](https://github.com/collectiveidea/interactor)
 
 ## JavaScript
