--- a/source/posts/2017/09-11-podcast-05-36.html.md
+++ b/source/posts/2017/09-11-podcast-05-36.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0536.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.36/0536.mp3"
 audio_format: "audio/mpeg"
-audio_length: 26237270
-duration: "00:27:18"
+audio_length: 54304164
+duration: "00:56:32"
 small_icon: mic
 main_image: "/images/static/05/0536.png"
 ---
@@ -24,5 +24,11 @@ main_image: "/images/static/05/0536.png"
 
  - [Announcing Yarn 1.0](https://code.facebook.com/posts/274518539716230), [Why we moved from Angular 2 to Vue.js (and why we didn’t choose React)](https://medium.com/reverdev/why-we-moved-from-angular-2-to-vue-js-and-why-we-didnt-choose-react-ef807d9f4163) и [Cycle.js: A Unified Theory of Everything for JavaScript](https://medium.com/open-collective/cycle-js-a-unified-theory-of-everything-for-javascript-e266ac9a59ad)
  - [Size Limit: Make the Web lighter](https://evilmartians.com/chronicles/size-limit-make-the-web-lighter), [LookForward.js - a small library that helps you to create smooth transitions between pages with the easiest way](https://appleple.github.io/lookforward/), [React PowerPlug - set of components to you add different types of state in your dumb components](https://github.com/renatorib/react-powerplug) и [Rythm.js - a javascript library that makes your page dance](https://okazari.github.io/Rythm.js/)
+
+## В гостях - Иван Фокеев
+
+ - [Github](https://github.com/ifokeev)
+ - [Work](https://statsbot.co/)
+
 
 READMORE
