--- a/source/posts/2017/09-18-podcast-05-37.html.md
+++ b/source/posts/2017/09-18-podcast-05-37.html.md
@@ -20,6 +20,6 @@ main_image: "/images/static/05/0537.png"
 
 ## JavaScript
 
-
+ - [Electron: The Bad Parts](https://hackernoon.com/electron-the-bad-parts-2b710c491547)
 
 READMORE
