--- a/source/posts/2017/09-25-podcast-05-38.html.md
+++ b/source/posts/2017/09-25-podcast-05-38.html.md
@@ -21,7 +21,7 @@ main_image: "/images/static/05/0538.png"
 
 ## JavaScript
 
- - [Relicensing React, Jest, Flow, and Immutable.js](https://code.facebook.com/posts/300798627056246), [The end of Framework Churn](http://blog.ionic.io/the-end-of-framework-churn/)
- - [Storybook - a development environment for UI components](https://storybook.js.org/), [Bosket - a library of tree views implementations for well known front-end reactive frameworks such as Angular or React](https://elbywan.github.io/bosket/)
+ - [Relicensing React, Jest, Flow, and Immutable.js](https://code.facebook.com/posts/300798627056246), [The end of Framework Churn](http://blog.ionic.io/the-end-of-framework-churn/) и [Angular vs. React vs. Vue: A 2017 comparison](https://medium.com/unicorn-supplies/angular-vs-react-vs-vue-a-2017-comparison-c5c52d620176)
+ - [Storybook - a development environment for UI components](https://storybook.js.org/), [Bosket - a library of tree views implementations for well known front-end reactive frameworks such as Angular or React](https://elbywan.github.io/bosket/) и [Ngraph.path - fast path finding for arbitrary graphs](https://anvaka.github.io/ngraph.path.demo/)
 
 READMORE
