--- a/source/posts/2017/09-25-podcast-05-38.html.md
+++ b/source/posts/2017/09-25-podcast-05-38.html.md
@@ -16,8 +16,8 @@ main_image: "/images/static/05/0538.png"
 
 ## Ruby
 
- - [DateTime#to_time and Time#to_time preserves receiver's timezone offset info in Ruby 2.4](https://blog.bigbinary.com/2017/09/19/to-time-preserves-time-zone-info-in-ruby-2-4.html), [GitLab 10.0 Released with Auto DevOps and Group Issue Boards](https://about.gitlab.com/2017/09/22/gitlab-10-0-released/) и [Ruby 3 JIT roadmap and status](https://vmakarov.fedorapeople.org/VMakarov-RubyKaigi2017.pdf)
- - [Add credentials using a generic EncryptedConfiguration class](https://github.com/rails/rails/pull/30067), [Add `with_attached_*` scope to `has_one_attached` macro](https://github.com/rails/rails/pull/30629) и [Don't call us, we'll call you: Sending webhooks with Rails](https://benediktdeicke.com/2017/09/sending-webhooks-with-rails/)
+ - [DateTime#to_time and Time#to_time preserves receiver's timezone offset info in Ruby 2.4](https://blog.bigbinary.com/2017/09/19/to-time-preserves-time-zone-info-in-ruby-2-4.html), [GitLab 10.0 Released with Auto DevOps and Group Issue Boards](https://about.gitlab.com/2017/09/22/gitlab-10-0-released/), [Add credentials using a generic EncryptedConfiguration class](https://github.com/rails/rails/pull/30067) и [Add `with_attached_*` scope to `has_one_attached` macro](https://github.com/rails/rails/pull/30629)
+ - [Ruby 3 JIT roadmap and status](https://vmakarov.fedorapeople.org/VMakarov-RubyKaigi2017.pdf) и [Don't call us, we'll call you: Sending webhooks with Rails](https://benediktdeicke.com/2017/09/sending-webhooks-with-rails/)
  - [Top 15 Ruby web applications](http://handypixel.com/top-15-ruby-web-applications/), [A couple words on Arrays in Ruby](http://rubyblog.pro/2017/09/couple-words-on-arrays) и [Blockchain Lite (Ruby Edition)](https://github.com/openblockchains/blockchain.lite.rb)
 
 ## JavaScript
