--- a/source/posts/2017/09-25-podcast-05-38.html.md
+++ b/source/posts/2017/09-25-podcast-05-38.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0538.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.38/0538.mp3"
 audio_format: "audio/mpeg"
-audio_length: 19852060
-duration: "00:20:39"
+audio_length: 77440060
+duration: "01:20:38"
 small_icon: mic
 main_image: "/images/static/05/0538.png"
 ---
@@ -16,7 +16,7 @@ main_image: "/images/static/05/0538.png"
 
 ## Ruby
 
- - [DateTime#to_time and Time#to_time preserves receiver's timezone offset info in Ruby 2.4](https://blog.bigbinary.com/2017/09/19/to-time-preserves-time-zone-info-in-ruby-2-4.html), [GitLab 10.0 Released with Auto DevOps and Group Issue Boards](https://about.gitlab.com/2017/09/22/gitlab-10-0-released/), [Add credentials using a generic EncryptedConfiguration class](https://github.com/rails/rails/pull/30067) и [Add `with_attached_*` scope to `has_one_attached` macro](https://github.com/rails/rails/pull/30629)
+ - [DateTime#to_time and Time#to_time preserves receiver's timezone offset info in Ruby 2.4](https://blog.bigbinary.com/2017/09/19/to-time-preserves-time-zone-info-in-ruby-2-4.html), [GitLab 10.0 Released with Auto DevOps and Group Issue Boards](https://about.gitlab.com/2017/09/22/gitlab-10-0-released/), [Add credentials using a generic EncryptedConfiguration class](https://github.com/rails/rails/pull/30067) и [Add with_attached_* scope to has_one_attached macro](https://github.com/rails/rails/pull/30629)
  - [Ruby 3 JIT roadmap and status](https://vmakarov.fedorapeople.org/VMakarov-RubyKaigi2017.pdf) и [Don't call us, we'll call you: Sending webhooks with Rails](https://benediktdeicke.com/2017/09/sending-webhooks-with-rails/)
  - [Top 15 Ruby web applications](http://handypixel.com/top-15-ruby-web-applications/), [A couple words on Arrays in Ruby](http://rubyblog.pro/2017/09/couple-words-on-arrays) и [Blockchain Lite (Ruby Edition)](https://github.com/openblockchains/blockchain.lite.rb)
 
@@ -24,5 +24,14 @@ main_image: "/images/static/05/0538.png"
 
  - [Relicensing React, Jest, Flow, and Immutable.js](https://code.facebook.com/posts/300798627056246), [The end of Framework Churn](http://blog.ionic.io/the-end-of-framework-churn/) и [Angular vs. React vs. Vue: A 2017 comparison](https://medium.com/unicorn-supplies/angular-vs-react-vs-vue-a-2017-comparison-c5c52d620176)
  - [Storybook - a development environment for UI components](https://storybook.js.org/), [Bosket - a library of tree views implementations for well known front-end reactive frameworks such as Angular or React](https://elbywan.github.io/bosket/) и [Ngraph.path - fast path finding for arbitrary graphs](https://anvaka.github.io/ngraph.path.demo/)
+
+## В гостях - Valentine Zavadskiy
+
+ - [Github](https://github.com/Saicheg)
+ - [Linkedin](https://www.linkedin.com/in/valentinzavadsky/)
+
+## Conferences
+
+ - [Ruby Meditation #18](http://www.rubymeditation.com/)
 
 READMORE
