--- a/source/posts/2017/10-09-podcast-05-40.html.md
+++ b/source/posts/2017/10-09-podcast-05-40.html.md
@@ -16,11 +16,12 @@ main_image: "/images/static/05/0540.png"
 
 ## Ruby
 
- - [On Bundler 2.0 compatibility](https://depfu.com/blog/2017/10/04/on-bundler-20-compatibility)
+ - [On Bundler 2.0 compatibility](https://depfu.com/blog/2017/10/04/on-bundler-20-compatibility) и [Ecto vs ActiveRecord](https://www.dailydrip.com/blog/ecto-vs-activerecord)
+ - [PostgreSQL 10 Released](https://www.postgresql.org/about/news/1786/), [PgParty - ActiveRecord migrations and model helpers for creating and managing PostgreSQL 10 partitions](https://github.com/rkrage/pg_party) и [Graphql-errors - provides a simple error handling for graphql-ruby](https://github.com/exAspArk/graphql-errors)
 
 ## JavaScript
 
-
+ - [The Road to Ember 3.0](https://emberjs.com/blog/2017/10/03/the-road-to-ember-3-0.html), [The future of accessibility for custom elements](https://medium.com/dev-channel/the-future-of-accessibility-for-custom-elements-291cfb3ffabe)
 
 
 READMORE
