--- a/source/posts/2017/10-15-podcast-05-41.html.md
+++ b/source/posts/2017/10-15-podcast-05-41.html.md
@@ -17,7 +17,7 @@ main_image: "/images/static/05/0541.png"
 ## Ruby
 
  - [Ruby 2.5.0-preview1 Released](https://www.ruby-lang.org/en/news/2017/10/10/ruby-2-5-0-preview1-released/), [Improved stacktrace display in Ruby 2.5](https://mlomnicki.com/improved-stascktrace-display-in-ruby25/), [Rails 5.2 adds expiry option for signed and encrypted cookies and adds relative expiry time](https://blog.bigbinary.com/2017/10/09/expirty-option-for-signed-and-encrypted-cookies-in-Rails-5-2.html) и [Unsafe Object Deserialization Vulnerability in RubyGems](http://blog.rubygems.org/2017/10/09/unsafe-object-deserialization-vulnerability.html)
- - [Why Ruby app servers break on macOS High Sierra and what can be done about it](https://blog.phusion.nl/2017/10/13/why-ruby-app-servers-break-on-macos-high-sierra-and-what-can-be-done-about-it/), [Configuring Puma, Unicorn and Passenger for Maximum Efficiency](https://www.speedshop.co/2017/10/12/appserver.html)
+ - [Why Ruby app servers break on macOS High Sierra and what can be done about it](https://blog.phusion.nl/2017/10/13/why-ruby-app-servers-break-on-macos-high-sierra-and-what-can-be-done-about-it/) и [Configuring Puma, Unicorn and Passenger for Maximum Efficiency](https://www.speedshop.co/2017/10/12/appserver.html)
  - [Which JSON Serializer To Use For A New Rails API?](http://www.carlosramireziii.com/which-json-serializer-to-use-for-a-new-rails-api.html), [Reusable UI components in Rails](https://goiabada.blog/rails-components-faedd412ce19) и [Simple approach to Rails 5 API authentication with Json Web Token](https://www.codementor.io/omedale/simple-approach-to-rails-5-api-authentication-with-json-web-token-cpqbgrdo6)
 
 ## JavaScript
