--- a/source/posts/2017/10-15-podcast-05-41.html.md
+++ b/source/posts/2017/10-15-podcast-05-41.html.md
@@ -1,5 +1,5 @@
 ---
-title: "41 выпуск 05 сезона.  и прочее"
+title: "41 выпуск 05 сезона. Ruby 2.5.0-preview1, Reusable UI components in Rails, React Sight, ProseMirror и прочее"
 date: 2017-10-15
 tags:
  - podcasts
@@ -22,7 +22,8 @@ main_image: "/images/static/05/0541.png"
 
 ## JavaScript
 
- - [Things to love and hate in Electron](https://binary-studio.com/2017/09/12/love-hate-electron/)
- - [Build a shopping cart with Vue.js and Element UI (no Vuex)](https://medium.com/@connorleech/build-a-shopping-cart-with-vue-js-and-element-ui-no-vuex-54682e9df5cd)
+ - [Things to love and hate in Electron](https://binary-studio.com/2017/09/12/love-hate-electron/) и [Build a shopping cart with Vue.js and Element UI (no Vuex)](https://medium.com/@connorleech/build-a-shopping-cart-with-vue-js-and-element-ui-no-vuex-54682e9df5cd)
+ - [JavaScript got better while I wasn’t looking](https://eev.ee/blog/2017/10/07/javascript-got-better-while-i-wasnt-looking/) и [JavaScript's Promise Leaks Memory](https://alexn.org/blog/2017/10/11/javascript-promise-leaks-memory.html)
+ - [React Sight - a live view of the component hierarchy tree of your React application](https://github.com/React-Sight/React-Sight), [ProseMirror - in-browser semantic rich text editing](http://prosemirror.net/) и [Taucharts One](https://blog.taucharts.com/taucharts-one/)
 
 READMORE
