--- a/source/posts/2017/10-15-podcast-05-41.html.md
+++ b/source/posts/2017/10-15-podcast-05-41.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0541.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.41/0541.mp3"
 audio_format: "audio/mpeg"
-audio_length: 28866460
-duration: "00:30:02"
+audio_length: 50982898
+duration: "00:53:05"
 small_icon: mic
 main_image: "/images/static/05/0541.png"
 ---
@@ -25,5 +25,10 @@ main_image: "/images/static/05/0541.png"
  - [Things to love and hate in Electron](https://binary-studio.com/2017/09/12/love-hate-electron/) и [Build a shopping cart with Vue.js and Element UI (no Vuex)](https://medium.com/@connorleech/build-a-shopping-cart-with-vue-js-and-element-ui-no-vuex-54682e9df5cd)
  - [JavaScript got better while I wasn’t looking](https://eev.ee/blog/2017/10/07/javascript-got-better-while-i-wasnt-looking/) и [JavaScript's Promise Leaks Memory](https://alexn.org/blog/2017/10/11/javascript-promise-leaks-memory.html)
  - [React Sight - a live view of the component hierarchy tree of your React application](https://github.com/React-Sight/React-Sight), [ProseMirror - in-browser semantic rich text editing](http://prosemirror.net/) и [Taucharts One](https://blog.taucharts.com/taucharts-one/)
+
+## В гостях - Тимофей Лавник
+
+ - [Github](https://github.com/nwtima)
+ - [Linkedin](https://www.linkedin.com/in/tim-lavnik-bb582bba/)
 
 READMORE
