--- a/source/posts/2017/11-06-podcast-05-44.html.md
+++ b/source/posts/2017/11-06-podcast-05-44.html.md
@@ -1,5 +1,5 @@
 ---
-title: "44 выпуск 05 сезона.  и прочее"
+title: "44 выпуск 05 сезона. Performance Improvements in Ruby 2.5, Testing Stripe with Rails and RSpec, Electron.NET и прочее"
 date: 2017-11-06
 tags:
  - podcasts
@@ -21,7 +21,7 @@ main_image: "/images/static/05/0544.png"
 
 ## JavaScript
 
- - [NEWS: Node.js 8 Moves into Long-Term Support and Node.js 9 Becomes the New Current Release Line](https://medium.com/the-node-js-collection/news-node-js-8-moves-into-long-term-support-and-node-js-9-becomes-the-new-current-release-line-74cf754a10a0), [Version 5.0.0 of Angular Now Available](https://blog.angular.io/version-5-0-0-of-angular-now-available-37e414935ced) и [GraphQL at massive scale: GraphQL as the glue in a microservice architecture](https://about.sourcegraph.com/graphql/graphql-at-massive-scale-graphql-as-the-glue-in-a-microservice-architecture/)
- - [Electron.NET - build cross platform desktop apps with ASP.NET NET Core](https://github.com/ElectronNET/Electron.NET), [Maptalks.js - a light JavaScript library for integrated 2D/3D maps](https://maptalks.org/)
+ - [Node.js 8 Moves into Long-Term Support and Node.js 9 Becomes the New Current Release Line](https://medium.com/the-node-js-collection/news-node-js-8-moves-into-long-term-support-and-node-js-9-becomes-the-new-current-release-line-74cf754a10a0), [Version 5.0.0 of Angular Now Available](https://blog.angular.io/version-5-0-0-of-angular-now-available-37e414935ced) и [GraphQL at massive scale: GraphQL as the glue in a microservice architecture](https://about.sourcegraph.com/graphql/graphql-at-massive-scale-graphql-as-the-glue-in-a-microservice-architecture/)
+ - [Electron.NET - build cross platform desktop apps with ASP.NET NET Core](https://github.com/ElectronNET/Electron.NET), [Maptalks.js - a light JavaScript library for integrated 2D/3D maps](https://maptalks.org/), [Frappé Charts - a github-inspired simple and modern charts for the web with zero dependencies](https://frappe.github.io/charts/) и [Focusingly - a JavaScript library for better focus styling](https://www.focusingly.net/)
 
 READMORE
