--- a/source/posts/2017/11-13-podcast-05-45.html.md
+++ b/source/posts/2017/11-13-podcast-05-45.html.md
@@ -16,16 +16,9 @@ main_image: "/images/static/05/0545.png"
 
 ## Ruby
 
- - [Docker + Rails + System tests with Headless Chrome](https://dev.to/dstull/docker--rails--system-tests-with-headless-chrome-d00)
- - [Ruby Versions Used in Commercial Projects in 2017](https://semaphoreci.com/blog/2017/11/08/ruby-versions-used-in-commercial-projects-in-2017.html)
- - [Functional Programming Aspects of the Ruby Language](http://gustavocaso.github.io/2017/11/functional-programming-aspects-of-the-ruby-language/)
- - [How we switched from Sprockets to Webpack](https://rossta.net/blog/from-sprockets-to-webpack.html)
- - [80% Smaller Rails Page Size With Rack Deflate](https://www.schneems.com/2017/11/08/80-smaller-rails-footprint-with-rack-deflate/)
- - [Partition and conquer](https://evilmartians.com/chronicles/partition-and-conquer)
- - [Dckerize - supercharged Rails development using Docker](https://github.com/pacuna/dckerize)
- - [WebSocket Director - command line tool for testing websocket servers using scenarios](https://github.com/palkan/wsdirector)
- - [Passwordless - add authentication to your Rails app without all the icky-ness of passwords](https://github.com/mikker/passwordless)
- - [Speeding Up Tests](https://www.driftingruby.com/episodes/speeding-up-tests)
+ - [Ruby Versions Used in Commercial Projects in 2017](https://semaphoreci.com/blog/2017/11/08/ruby-versions-used-in-commercial-projects-in-2017.html), [Docker + Rails + System tests with Headless Chrome](https://dev.to/dstull/docker--rails--system-tests-with-headless-chrome-d00) и [Functional Programming Aspects of the Ruby Language](http://gustavocaso.github.io/2017/11/functional-programming-aspects-of-the-ruby-language/)
+ - [How we switched from Sprockets to Webpack](https://rossta.net/blog/from-sprockets-to-webpack.html), [Partition and conquer](https://evilmartians.com/chronicles/partition-and-conquer) и [80% Smaller Rails Page Size With Rack Deflate](https://www.schneems.com/2017/11/08/80-smaller-rails-footprint-with-rack-deflate/)
+ - [Dckerize - supercharged Rails development using Docker](https://github.com/pacuna/dckerize), [WebSocket Director - command line tool for testing websocket servers using scenarios](https://github.com/palkan/wsdirector), [Passwordless - add authentication to your Rails app without all the icky-ness of passwords](https://github.com/mikker/passwordless) и [Speeding Up Tests](https://www.driftingruby.com/episodes/speeding-up-tests)
 
 ## JavaScript
 
