--- a/source/posts/2017/11-13-podcast-05-45.html.md
+++ b/source/posts/2017/11-13-podcast-05-45.html.md
@@ -22,9 +22,8 @@ main_image: "/images/static/05/0545.png"
 
 ## JavaScript
 
- - [All You Need To Know About CSS-in-JS](https://hackernoon.com/all-you-need-to-know-about-css-in-js-984a72d48ebc)
- - [YamUI - an UI component framework for Yammer.com](https://microsoft.github.io/YamUI/)
- - [Emergence.js - a lightweight, high-performance JS plugin for detecting and manipulating elements in the browser](https://xtianmiller.github.io/emergence.js/)
- - [JSON5 - a proposed extension to JSON that aims to make it easier for humans to write and maintain by hand](http://json5.org/)
+ - [All You Need To Know About CSS-in-JS](https://hackernoon.com/all-you-need-to-know-about-css-in-js-984a72d48ebc), [Right-To-Left Development In Mobile Design](https://www.smashingmagazine.com/2017/11/right-to-left-mobile-design/) и [CSS Code Smells](https://css-tricks.com/css-code-smells/)
+ - [Proper Error Handling in JavaScript](https://scotch.io/tutorials/proper-error-handling-in-javascript), [How we do Vue: one year later](https://about.gitlab.com/2017/11/09/gitlab-vue-one-year-later/) и [Node.js Best Practices](https://github.com/i0natan/nodebestpractices)
+ - [YamUI - an UI component framework for Yammer.com](https://microsoft.github.io/YamUI/), [Emergence.js - a lightweight, high-performance JS plugin for detecting and manipulating elements in the browser](https://xtianmiller.github.io/emergence.js/) и [JSON5 - a proposed extension to JSON that aims to make it easier for humans to write and maintain by hand](http://json5.org/)
 
 READMORE
