--- a/source/posts/2017/11-13-podcast-05-45.html.md
+++ b/source/posts/2017/11-13-podcast-05-45.html.md
@@ -1,13 +1,13 @@
 ---
-title: "45 выпуск 05 сезона.  и прочее"
+title: "45 выпуск 05 сезона. How we switched from Sprockets to Webpack, CSS Code Smells, WebSocket Director, JSON5 и прочее"
 date: 2017-11-13
 tags:
  - podcasts
 audio_url: "http://mp3.rwpod.com/podcasts/05/0545.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.45/0545.mp3"
 audio_format: "audio/mpeg"
-audio_length: 18457106
-duration: "00:19:12"
+audio_length: 93847572
+duration: "01:37:44"
 small_icon: mic
 main_image: "/images/static/05/0545.png"
 ---
@@ -25,5 +25,15 @@ main_image: "/images/static/05/0545.png"
  - [All You Need To Know About CSS-in-JS](https://hackernoon.com/all-you-need-to-know-about-css-in-js-984a72d48ebc), [Right-To-Left Development In Mobile Design](https://www.smashingmagazine.com/2017/11/right-to-left-mobile-design/) и [CSS Code Smells](https://css-tricks.com/css-code-smells/)
  - [Proper Error Handling in JavaScript](https://scotch.io/tutorials/proper-error-handling-in-javascript), [How we do Vue: one year later](https://about.gitlab.com/2017/11/09/gitlab-vue-one-year-later/) и [Node.js Best Practices](https://github.com/i0natan/nodebestpractices)
  - [YamUI - an UI component framework for Yammer.com](https://microsoft.github.io/YamUI/), [Emergence.js - a lightweight, high-performance JS plugin for detecting and manipulating elements in the browser](https://xtianmiller.github.io/emergence.js/) и [JSON5 - a proposed extension to JSON that aims to make it easier for humans to write and maintain by hand](http://json5.org/)
+
+## В гостях - Павел Калашников
+
+  - [Блог](http://pavelkalashnikov.tumblr.com/)
+  - [Github](https://github.com/kalashnikovisme)
+  - [Twitter](https://twitter.com/kalashnikovisme)
+
+## Conferences
+
+ - [RUBY Meditation #19](http://www.rubymeditation.com/)
 
 READMORE
