--- a/source/posts/2017/11-20-podcast-05-46.html.md
+++ b/source/posts/2017/11-20-podcast-05-46.html.md
@@ -16,10 +16,12 @@ main_image: "/images/static/05/0546.png"
 
 ## Ruby
 
+ - [Rails 5.1 does not load all records on ActiveRecord::Relation#inspect](http://blog.bigbinary.com/2017/11/14/do-no-load-all-records-on-activerecord-relation-inspect.html)
  - [Karafka (Ruby + Kafka) framework 1.1.0 Release Notes](https://medium.com/@maciejmensfeld/karafka-ruby-kafka-framework-1-1-0-release-notes-b4c91170ecba)
 
 ## JavaScript
 
+ - [Code together in real time with Teletype for Atom](https://blog.atom.io/2017/11/15/code-together-in-real-time-with-teletype-for-atom.html)
  - [Teletype for Atom lets developers share their workspace with team members and collaborate on code in real time](https://teletype.atom.io/)
 
 READMORE
