--- a/source/posts/2017/11-20-podcast-05-46.html.md
+++ b/source/posts/2017/11-20-podcast-05-46.html.md
@@ -1,5 +1,5 @@
 ---
-title: "46 выпуск 05 сезона.  и прочее"
+title: "46 выпуск 05 сезона. Karafka 1.1.0, Firefox Quantum, Embracing metrics as new tests, Teletype и прочее"
 date: 2017-11-20
 tags:
  - podcasts
@@ -16,12 +16,12 @@ main_image: "/images/static/05/0546.png"
 
 ## Ruby
 
- - [Rails 5.1 does not load all records on ActiveRecord::Relation#inspect](http://blog.bigbinary.com/2017/11/14/do-no-load-all-records-on-activerecord-relation-inspect.html)
- - [Karafka (Ruby + Kafka) framework 1.1.0 Release Notes](https://medium.com/@maciejmensfeld/karafka-ruby-kafka-framework-1-1-0-release-notes-b4c91170ecba)
+ - [Rails 5.1 does not load all records on ActiveRecord::Relation#inspect](http://blog.bigbinary.com/2017/11/14/do-no-load-all-records-on-activerecord-relation-inspect.html), [Karafka (Ruby + Kafka) framework 1.1.0 Release Notes](https://medium.com/@maciejmensfeld/karafka-ruby-kafka-framework-1-1-0-release-notes-b4c91170ecba) и [Active Record Database Documentation](https://www.mayerdan.com/ruby/2017/11/12/active-record-documentation-in-rails)
+ - [Embracing metrics as new tests](https://evilmartians.com/chronicles/embracing-metrics-as-new-tests) и [Advisory Locks and How to Use Them](http://shiroyasha.io/advisory-locks-and-how-to-use-them.html)
 
 ## JavaScript
 
- - [Code together in real time with Teletype for Atom](https://blog.atom.io/2017/11/15/code-together-in-real-time-with-teletype-for-atom.html)
- - [Teletype for Atom lets developers share their workspace with team members and collaborate on code in real time](https://teletype.atom.io/)
+ - [The New Firefox Is Here!](https://blog.mozilla.org/firefox/the-new-firefox-is-here/), [WebAssembly support now shipping in all major browsers](https://blog.mozilla.org/blog/2017/11/13/webassembly-in-browsers/)
+ - [Code together in real time with Teletype for Atom](https://blog.atom.io/2017/11/15/code-together-in-real-time-with-teletype-for-atom.html), [Teletype for Atom lets developers share their workspace with team members and collaborate on code in real time](https://teletype.atom.io/) и [Luxon - a powerful, modern, and friendly wrapper for Javascript dates and times](https://moment.github.io/luxon/)
 
 READMORE
