--- a/source/posts/2017/11-20-podcast-05-46.html.md
+++ b/source/posts/2017/11-20-podcast-05-46.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/05/0546.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.46/0546.mp3"
 audio_format: "audio/mpeg"
-audio_length: 93847572
-duration: "01:37:44"
+audio_length: 27587896
+duration: "00:28:42"
 small_icon: mic
 main_image: "/images/static/05/0546.png"
 ---
@@ -21,7 +21,12 @@ main_image: "/images/static/05/0546.png"
 
 ## JavaScript
 
- - [The New Firefox Is Here!](https://blog.mozilla.org/firefox/the-new-firefox-is-here/), [WebAssembly support now shipping in all major browsers](https://blog.mozilla.org/blog/2017/11/13/webassembly-in-browsers/)
+ - [The New Firefox Is Here!](https://blog.mozilla.org/firefox/the-new-firefox-is-here/), [WebAssembly support now shipping in all major browsers](https://blog.mozilla.org/blog/2017/11/13/webassembly-in-browsers/) и [W3C Strategic Highlights](https://www.w3.org/2017/11/w3c-highlights/)
  - [Code together in real time with Teletype for Atom](https://blog.atom.io/2017/11/15/code-together-in-real-time-with-teletype-for-atom.html), [Teletype for Atom lets developers share their workspace with team members and collaborate on code in real time](https://teletype.atom.io/) и [Luxon - a powerful, modern, and friendly wrapper for Javascript dates and times](https://moment.github.io/luxon/)
+
+## Conferences
+
+ - [Pivorak](https://pivorak.com/talks/supercharge-your-postgresql-with-extensions)
+ - [Lviv SQL Server UG](http://lvivsqlug.pass.org/)
 
 READMORE
