--- a/source/posts/2017/12-03-cafe-006.html.md
+++ b/source/posts/2017/12-03-cafe-006.html.md
@@ -1,5 +1,5 @@
 ---
-title: "RWPod Кафе 6: Volodya Sveredyuk и Pivorak"
+title: "RWPod Кафе 6. Volodya Sveredyuk и Pivorak"
 date: 2017-12-03
 tags:
  - podcasts
