--- a/source/posts/2017/12-11-podcast-05-49.html.md
+++ b/source/posts/2017/12-11-podcast-05-49.html.md
@@ -1,13 +1,13 @@
 ---
-title: "49 выпуск 05 сезона.  и прочее"
+title: "49 выпуск 05 сезона. Redmine Security Scanner, A recap of front-end development in 2017, Parcel, Electron-toolkit, WordPressify и прочее"
 date: 2017-12-11
 tags:
  - podcasts
 audio_url: "http://mp3.rwpod.com/podcasts/05/0549.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/05.49/0549.mp3"
 audio_format: "audio/mpeg"
-audio_length: 22897226
-duration: "00:23:49"
+audio_length: 33851034
+duration: "00:35:14"
 small_icon: mic
 main_image: "/images/static/05/0549.png"
 ---
@@ -22,7 +22,8 @@ main_image: "/images/static/05/0549.png"
 
 ## JavaScript
 
- - [Build your own Redux middleware](https://blog.campvanilla.com/redux-middleware-basics-getting-started-17dc31c6435c)
- - [Introducing electron-toolkit: The Electron app to build and launch Electron apps](https://hackernoon.com/introducing-electron-toolkit-the-electron-app-to-build-and-launch-electron-apps-6530450e257e)
+ - [A recap of front-end development in 2017](https://levelup.gitconnected.com/a-recap-of-front-end-development-in-2017-7072ce99e727) и [Getting To Know The JavaScript Internationalization API](https://netbasal.com/getting-to-know-the-javascript-internationalization-api-cb893b3908e0)
+ - [Finding Non-Unique Elements in Javascript](https://hackernoon.com/finding-non-unique-elements-in-javascript-d934e6fd6260), [Build your own Redux middleware](https://blog.campvanilla.com/redux-middleware-basics-getting-started-17dc31c6435c) и [So, you learned JavaScript – what now?](https://christianheilmann.com/2017/12/05/so-you-learned-javascript-what-now/)
+ - [Parcel - blazing fast, zero configuration web application bundler](https://parceljs.org/), [Introducing electron-toolkit: The Electron app to build and launch Electron apps](https://hackernoon.com/introducing-electron-toolkit-the-electron-app-to-build-and-launch-electron-apps-6530450e257e), [WordPressify - a build system designed to automate your WordPress development workflow](http://www.wordpressify.co/), [Muuri - responsive, sortable, filterable and draggable grid layouts](https://haltu.github.io/muuri/) и [Iota - a responsive micro-framework for the grid spec powered by CSS custom properties](http://korywakefield.com/iota/)
 
 READMORE
