--- a/source/posts/2018/01-29-podcast-06-04.html.md
+++ b/source/posts/2018/01-29-podcast-06-04.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/06/0604.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.04/0604.mp3"
 audio_format: "audio/mpeg"
-audio_length: 27891430
-duration: "00:29:01"
+audio_length: 72378822
+duration: "01:15:22"
 small_icon: mic
 main_image: "/images/static/06/0604.png"
 ---
@@ -23,5 +23,10 @@ main_image: "/images/static/06/0604.png"
 
  - [Webpack 4 beta](https://medium.com/webpack/webpack-4-beta-try-it-today-6b1d27d7d7e2), [Ionic vs React Native: What's the Difference?](https://applikeysolutions.com/blog/ionic-vs-react-native-what-s-the-difference) и [PWAs are coming to iOS 11.3: Cupertino, we have a problem](https://medium.com/@firt/pwas-are-coming-to-ios-11-3-cupertino-we-have-a-problem-2ff49fd7d6ea)
  - [Part 2: How to stop me harvesting credit card numbers and passwords from your site](https://hackernoon.com/part-2-how-to-stop-me-harvesting-credit-card-numbers-and-passwords-from-your-site-844f739659b9), [The WHY behind the WAT: An explanation of JavaScript’s weird type system](https://medium.com/dailyjs/the-why-behind-the-wat-an-explanation-of-javascripts-weird-type-system-83b92879a8db), [D3 Discovery](https://d3-discovery.net/) и [JSNES - a JavaScript NES emulator](https://github.com/bfirsh/jsnes)
+
+ ## В гостях - Kirill Zonov
+
+  - [Github](https://github.com/graffzon)
+  - [Блог](http://zonov.me/)
 
 READMORE
