--- a/source/posts/2018/02-05-podcast-06-05.html.md
+++ b/source/posts/2018/02-05-podcast-06-05.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/06/0605.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.05/0605.mp3"
 audio_format: "audio/mpeg"
-audio_length: 72378822
-duration: "01:15:22"
+audio_length: 27378998
+duration: "00:28:29"
 small_icon: mic
 main_image: "/images/static/06/0605.png"
 ---
@@ -22,6 +22,10 @@ main_image: "/images/static/06/0605.png"
 ## JavaScript
 
  - [8 Things Every Front-End Developer Must Learn](https://dev.degreed.com/8-things-every-front-end-developer-must-learn-a74bf868df4), [JavaScript: What’s new in ECMAScript 2018 (ES2018)?](https://www.bram.us/2018/01/30/whats-new-in-ecmascript2018/) и [An Introduction to GraphQL](https://hackernoon.com/an-introduction-to-graphql-2c3f7d8fb4e0)
- - [Debugging JavaScript With A Real Debugger You Did Not Know You Already Have](https://www.smashingmagazine.com/2018/02/javascript-firefox-debugger/), [How to use variable fonts in the real world](https://medium.com/clear-left-thinking/how-to-use-variable-fonts-in-the-real-world-e6d73065a604) и [Webpack demos](https://github.com/ruanyf/webpack-demos)
+ - [Debugging JavaScript With A Real Debugger You Did Not Know You Already Have](https://www.smashingmagazine.com/2018/02/javascript-firefox-debugger/), [How to use variable fonts in the real world](https://medium.com/clear-left-thinking/how-to-use-variable-fonts-in-the-real-world-e6d73065a604) ([Decovar шрифт](https://www.typenetwork.com/brochure/decovar-a-decorative-variable-font-by-david-berlow)) и [Webpack demos](https://github.com/ruanyf/webpack-demos)
+
+## Conferences
+
+ - [Ruby Meditation #20](http://www.rubymeditation.com/)
 
 READMORE
