--- a/source/posts/2018/02-12-podcast-06-06.html.md
+++ b/source/posts/2018/02-12-podcast-06-06.html.md
@@ -30,5 +30,7 @@ main_image: "/images/static/06/0606.png"
  - [Rollup now has code-splitting! And we need your help](https://medium.com/rollup/rollup-now-has-code-splitting-and-we-need-your-help-46defd901c82)
  - [Chiccocoin: Learn what is a Blockchain by creating one in NodeJS](https://developers.caffeina.com/chiccocoin-learn-what-is-a-blockchain-by-creating-one-in-nodejs-12929a89208b)
  - [JavaScript Date has too many traps](https://boostlog.io/@asha14/javascript-date-has-too-many-traps-5a71fc4352b91d9de6d0bde3)
+ - [The Top JavaScript Trends to Watch in 2018](https://hackernoon.com/the-top-javascript-trends-to-watch-in-2018-a8437dd94425)
+ - [Eloquent JavaScript, 3rd edition](http://eloquentjavascript.net/3rd_edition/)
 
 READMORE
