--- a/source/posts/2018/03-12-podcast-06-10.html.md
+++ b/source/posts/2018/03-12-podcast-06-10.html.md
@@ -26,9 +26,16 @@ main_image: "/images/static/06/0610.png"
 
 ## JavaScript
 
+ - [Standardizing lessons learned from AMP](https://amphtml.wordpress.com/2018/03/08/standardizing-lessons-learned-from-amp/)
+ - [AMP is not the issue, it’s Google](https://responsivedesign.is/articles/amp-is-not-the-issue-its-google/)
+ - [The Problem with Webpack and Why It Is (Kind of) Our Fault](https://medium.com/@allanbaptista/the-problem-with-webpack-8a025268a761)
+ - [Choosing Between Progressive Web Apps, React Native & NativeScript in 2018](https://www.telerik.com/blogs/choose-between-progressive-web-apps-react-native-nativescript-2018)
+ - [How I organize CSS in large projects using UFOCSS - Part 1](https://medium.com/@fuladuf/how-i-organize-css-in-large-projects-using-ufocss-part-1-9d04417f39f3)
  - [Driver - a light-weight, no-dependency, vanilla JavaScript engine to drive the user's focus across the page](http://kamranahmed.info/driver)
  - [Mutag - a simple MP3 file tag parser](https://github.com/chunqiuyiyu/mutag)
  - [AppBandit - Web Security Proxy in NodeJS and Electron](https://secapps.com/appbandit)
+ - [Awaity.js - a functional, lightweight alternative to bluebird.js, built with async / await in mind](https://github.com/asfktz/Awaity.js)
  - [Risk - an implementation of the popular board game Risk](https://risk.joshbassett.info/)
+ - [Coördinator - turn an SVG into XY coördinates](https://spotify.github.io/coordinator/)
 
 READMORE
