--- a/source/posts/2018/03-26-podcast-06-12.html.md
+++ b/source/posts/2018/03-26-podcast-06-12.html.md
@@ -6,8 +6,8 @@ tags:
 audio_url: "http://mp3.rwpod.com/podcasts/06/0612.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/06.12/0612.mp3"
 audio_format: "audio/mpeg"
-audio_length: 31396234
-duration: "00:32:40"
+audio_length: 22116062
+duration: "00:23:00"
 small_icon: mic
 main_image: "/images/static/06/0612.png"
 ---
@@ -16,7 +16,7 @@ main_image: "/images/static/06/0612.png"
 
 ## Ruby
 
- - [Towards The Ruby 3×3 Performance Goal](https://developers.redhat.com/blog/2018/03/22/ruby-3x3-performance-goal/), [Rails is still King](https://blog.browntreelabs.com/rails-is-still-king/) и [How to win friends and open-source your software](https://blog.phusion.nl/2018/03/21/how-to-win-friends-and-open-source-your-software/)
+ - [Towards The Ruby 3×3 Performance Goal](https://developers.redhat.com/blog/2018/03/22/ruby-3x3-performance-goal/), [Rails is still King](https://blog.browntreelabs.com/rails-is-still-king/) и [How to win friends and open-source your software](https://blog.phusion.nl/2018/03/21/how-to-win-friends-and-open-source-your-software/) (затронул поддержку [Upterm](https://github.com/railsware/upterm))
  - [Code editors for Mac](https://medium.com/@davidmles/code-editors-for-mac-747fe90334d), [More yield_self awesomeness. Also, the new name proposed](https://zverok.github.io/blog/2018-03-23-yield_self2.html) и [2 quick tips for IRB](https://medium.com/@farsi_mehdi/2-quick-tips-for-irb-360343bb8eb7)
 
 ## JavaScript
