--- a/source/posts/2018/04-02-podcast-06-13.html.md
+++ b/source/posts/2018/04-02-podcast-06-13.html.md
@@ -17,9 +17,18 @@ main_image: "/images/static/06/0613.png"
 ## Ruby
 
  - [Rails 5.0.7 and 5.1.6 have been released](http://weblog.rubyonrails.org/2018/3/29/Rails-5-0-7-and-5-1-6-have-been-released/)
+ - [Elapsed time with Ruby, the right way](https://blog.dnsimple.com/2018/03/elapsed-time-with-ruby-the-right-way/)
+ - [Capistrano deploy to ubuntu with systemd, nginx/puma and rbenv](https://prograils.com/posts/capistrano-deploy-to-ubuntu-with-systemd-nginx-puma-and-rbenv)
+ - [4 cool less known Rails features – part 1: ActiveJob, ActiveModel, command line](http://pdabrowski.com/blog/ruby-on-rails/4-cool-less-known-rails-features-part-1/)
+ - [WhereChain - don't write Post.where('comments > ?', 5), write Post.where.gt(comments: 5) instead](https://github.com/marcinruszkiewicz/where_chain)
+ - [Pp_sql - Rails ActiveRecord SQL queries log beautifier](https://github.com/kvokka/pp_sql/)
 
 ## JavaScript
 
+ - [React v16.3.0: New lifecycles and context API](https://reactjs.org/blog/2018/03/29/react-v-16-3.html)
+ - [Google JavaScript Style Guide](https://google.github.io/styleguide/jsguide.html)
+ - [From Express.js to AWS Lambda: Migrating existing Node.js applications to serverless](https://hackernoon.com/from-express-js-to-aws-lambda-migrating-existing-node-js-applications-to-serverless-7473041ecc56)
+ - [Speeding up webpack](https://medium.com/onfido-tech/speed-up-webpack-ff53c494b89c)
  - [TensorFlow.js - an open-source hardware-accelerated JavaScript library for training and deploying machine learning models](https://js.tensorflow.org/)
 
 READMORE
