--- a/source/posts/2018/04-02-podcast-06-13.html.md
+++ b/source/posts/2018/04-02-podcast-06-13.html.md
@@ -25,10 +25,15 @@ main_image: "/images/static/06/0613.png"
 
 ## JavaScript
 
+ - [Modern Frontend Developer in 2018](https://medium.com/tech-tajawal/modern-frontend-developer-in-2018-4c2072fa2b9c)
+ - [Announcing the Second Edition of "Refactoring"](https://martinfowler.com/articles/201803-refactoring-2nd-ed.html)
  - [React v16.3.0: New lifecycles and context API](https://reactjs.org/blog/2018/03/29/react-v-16-3.html)
+ - [Blogged Answers: Redux - Not Dead Yet!](http://blog.isquaredsoftware.com/2018/03/redux-not-dead-yet/)
  - [Google JavaScript Style Guide](https://google.github.io/styleguide/jsguide.html)
+ - [Google publishes a JavaScript style guide. Here are some key lessons](https://medium.freecodecamp.org/google-publishes-a-javascript-style-guide-here-are-some-key-lessons-1810b8ad050b)
  - [From Express.js to AWS Lambda: Migrating existing Node.js applications to serverless](https://hackernoon.com/from-express-js-to-aws-lambda-migrating-existing-node-js-applications-to-serverless-7473041ecc56)
  - [Speeding up webpack](https://medium.com/onfido-tech/speed-up-webpack-ff53c494b89c)
  - [TensorFlow.js - an open-source hardware-accelerated JavaScript library for training and deploying machine learning models](https://js.tensorflow.org/)
+ - [ReLaXed - a software to create PDF documents interactively using HTML or Pug (a shorthand for HTML)](https://github.com/RelaxedJS/ReLaXed)
 
 READMORE
